2006-03-10  Paul J Stevens <paul@nfg.nl>

	* configure.in, dbmail-message.c, debian/patches/00list, debug.c, debug.h, 
	  dsn.c, dsn.h, imap4.c, lmtp.c, main.c, misc.c, pop3.c, timsieve.c:
	resync
	* db.c:
	wrap imap append in transaction (closes: #312)
	* dbmail-imapsession.c, imapcommands.c:
	make imap expunge deal with empty mailboxes
	* config.c, dbmail.conf, dbmail.h.in, dbmailtypes.h, imapd.c, lmtpd.c, 
	  pop3d.c, server.c, server.h, timsieved.c:
	make logfiles and pid-directory configurable
	* debian/changelog, modules/authldap.c, pool.c:
	minor cleanups

2006-03-07  Aaron Stone  <aaron@serendipity.cx>

	* misc.h, misc.c:
	Added dm_shellesc to escaped potentially unsafe shell chars.
	* pipe.c:
	Use dm_shellesc before calling popen(sendmail_command).
	* lmtp.c:
	Allow | (pipe) in the validchars. If it gets into an email address,
	and that address is used when calling sendmail, we'll be ready.

2006-03-06  Aaron Stone  <aaron@serendipity.cx>

	* debug.h, debug.c:
	Removed TRACE_STOP, moved TRACE_MESSAGE to be less-serious than
	TRACE_WARNING.
	* db.c, dbmail-message.c, main.c:
	Removed references to TRACE_STOP.
	* dbmail.conf:
	Changed description of TRACE_SYSLOG config item.
	* acl.c, db.c, dbmail-imapsession.c:
	Fixed an uninitialized structure in the new ACL code.
	* list.c, misc.c, dbmail-mailbox.c:
	Accepted a patch from Matthew Sayler to prevent O(n^2) behavior
	in the list code.

2006-03-06  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog, imapd.c, lmtpd.c, pop3d.c, server.c, 
	  server.h, timsieved.c:
	freopen the standard streams and redirect stdout/stderr to log files. This
	will allow dbmail daemons to dissociate properly from the terminal
	* dbmail-imapsession.c:
	set loglevel to warning in case of closed socket (closes: #308)
	* sql/mysql/create_tables.mysql, sql/mysql/create_tables_innoDB.mysql, 
	  sql/mysql/migrate_from_1.x_to_2.0.mysql, 
	  sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql: